<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinates_form"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:minWidth="300dp">

    <TextView
        android:id="@+id/coordinates_form_header"
        android:layout_width="match_parent"
        android:gravity="center"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:background="@color/design_default_color_primary"
        android:textColor="@color/white"
        android:text="@string/coordinates_dialog_header" />

    <TextView
        android:id="@+id/latitude_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/latitude_label"
        android:labelFor="@id/latitude"
        android:layout_marginTop="30dp"
        android:layout_marginStart="15dp" />

    <EditText
        android:id="@+id/latitude"
        android:tag="@string/coordinate_edit_tag"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal|numberSigned"
        android:drawableStart="@drawable/baseline_explore_24"
        android:drawableTint="@color/field_grey"
        android:drawablePadding="5dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="5dp"
        tools:ignore="Autofill" />

    <TextView
        android:id="@+id/longitude_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/longitude_label"
        android:labelFor="@id/longitude"
        android:layout_marginTop="30dp"
        android:layout_marginStart="15dp" />

    <EditText
        android:id="@+id/longitude"
        android:tag="@string/coordinate_edit_tag"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal|numberSigned"
        android:drawableStart="@drawable/baseline_explore_24"
        android:drawableTint="@color/field_grey"
        android:drawablePadding="5dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="5dp"
        tools:ignore="Autofill" />

</LinearLayout>