<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/game_stats_overview_layout"
    tools:context=".controller.gamereview.fragment.GameStatsOverviewFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/game_stats_overview_teams"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="8dp"
        android:textColor="@color/white"
        android:background="@color/design_default_color_primary"
        android:textStyle="bold"
        android:layout_marginBottom="8dp"
        android:textAppearance="?android:attr/textAppearanceLarge"/>

    <TextView
        android:id="@+id/game_stats_overview_scores"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:gravity="center"
        android:textStyle="bold"
        android:textAppearance="?android:attr/textAppearanceLarge"/>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="vertical"
        android:layout_marginBottom="65dp">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:background="@color/light_grey">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/design_default_color_primary"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:gravity="center"
                android:textSize="18sp"
                android:text="@string/possession_stats_row_title" />

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="2">

                <TextView
                    android:id="@+id/game_overview_tracked_team"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:background="@color/light_grey"
                    android:gravity="start"
                    android:layout_weight="1"
                    android:padding="8dp"
                    android:textSize="18sp"
                    android:textColor="@color/design_default_color_primary"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/game_overview_tracked_team_possession"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:textSize="18sp"
                    android:textColor="@color/black"
                    android:background="@color/light_grey"
                    android:gravity="center"
                    android:layout_weight="1"
                    android:padding="8dp"/>

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="2">

                <TextView
                    android:id="@+id/game_overview_opponent_team"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:background="@color/white"
                    android:gravity="start"
                    android:layout_weight="1"
                    android:padding="8dp"
                    android:textSize="18sp"
                    android:textColor="@color/design_default_color_primary"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/game_overview_opponent_team_possession"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:textSize="18sp"
                    android:textColor="@color/black"
                    android:background="@color/white"
                    android:gravity="center"
                    android:layout_weight="1"
                    android:padding="8dp"/>

            </TableRow>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/design_default_color_primary"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:gravity="center"
                android:textSize="18sp"
                android:text="@string/playstyle_stats_row_title" />

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="2">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:background="@color/light_grey"
                    android:gravity="start"
                    android:layout_weight="1"
                    android:padding="8dp"
                    android:textSize="18sp"
                    android:textColor="@color/design_default_color_primary"
                    android:textStyle="bold"
                    android:text="@string/game_overview_stop_count"/>

                <TextView
                    android:id="@+id/game_overview_stop_count"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:textSize="18sp"
                    android:textColor="@color/black"
                    android:background="@color/light_grey"
                    android:gravity="center"
                    android:layout_weight="1"
                    android:padding="8dp"/>

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="2" >

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:background="@color/white"
                    android:gravity="start"
                    android:layout_weight="1"
                    android:padding="8dp"
                    android:textSize="18sp"
                    android:textColor="@color/design_default_color_primary"
                    android:textStyle="bold"
                    android:text="@string/game_overview_occasion_count"/>

                <TextView
                    android:id="@+id/game_overview_occasion_count"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:textSize="18sp"
                    android:textColor="@color/black"
                    android:background="@color/white"
                    android:gravity="center"
                    android:layout_weight="1"
                    android:padding="8dp"/>

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="2">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:background="@color/light_grey"
                    android:gravity="start"
                    android:layout_weight="1"
                    android:padding="8dp"
                    android:textSize="18sp"
                    android:textColor="@color/design_default_color_primary"
                    android:textStyle="bold"
                    android:text="@string/game_overview_offside_count"/>

                <TextView
                    android:id="@+id/game_overview_offside_count"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:textSize="18sp"
                    android:textColor="@color/black"
                    android:background="@color/light_grey"
                    android:gravity="center"
                    android:layout_weight="1"
                    android:padding="8dp"/>

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="2">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:background="@color/white"
                    android:gravity="start"
                    android:layout_weight="1"
                    android:padding="8dp"
                    android:textSize="18sp"
                    android:textColor="@color/design_default_color_primary"
                    android:textStyle="bold"
                    android:text="@string/game_overview_fault_count"/>

                <TextView
                    android:id="@+id/game_overview_fault_count"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:textSize="18sp"
                    android:textColor="@color/black"
                    android:background="@color/white"
                    android:gravity="center"
                    android:layout_weight="1"
                    android:padding="8dp"/>

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="2">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:background="@color/light_grey"
                    android:gravity="start"
                    android:layout_weight="1"
                    android:padding="8dp"
                    android:textSize="18sp"
                    android:textColor="@color/design_default_color_primary"
                    android:textStyle="bold"
                    android:text="@string/game_overview_penalty_count"/>

                <TextView
                    android:id="@+id/game_overview_penalty_count"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:textSize="18sp"
                    android:textColor="@color/black"
                    android:background="@color/light_grey"
                    android:gravity="center"
                    android:layout_weight="1"
                    android:padding="8dp"/>

            </TableRow>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/design_default_color_primary"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:gravity="center"
                android:textSize="18sp"
                android:text="@string/out_stats_row_title" />

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="3">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@color/light_grey"
                    android:gravity="center"
                    android:padding="8dp"
                    android:textSize="18sp"
                    android:textColor="@color/design_default_color_primary"
                    android:textStyle="bold"
                    android:text="@string/game_overview_classic_out_count"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:background="@color/light_grey"
                    android:gravity="center"
                    android:layout_weight="1"
                    android:padding="8dp"
                    android:textSize="18sp"
                    android:textColor="@color/design_default_color_primary"
                    android:textStyle="bold"
                    android:text="@string/game_overview_freekick_count"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:background="@color/light_grey"
                    android:gravity="center"
                    android:layout_weight="1"
                    android:padding="8dp"
                    android:textSize="18sp"
                    android:textColor="@color/design_default_color_primary"
                    android:textStyle="bold"
                    android:text="@string/game_overview_corner_count"/>

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="3">

                <TextView
                    android:id="@+id/game_overview_classic_out_count"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:textSize="18sp"
                    android:textColor="@color/black"
                    android:background="@color/white"
                    android:gravity="center"
                    android:padding="8dp"/>

                <TextView
                    android:id="@+id/game_overview_freekick_count"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:textSize="18sp"
                    android:textColor="@color/black"
                    android:background="@color/white"
                    android:gravity="center"
                    android:layout_weight="1"
                    android:padding="8dp"/>

                <TextView
                    android:id="@+id/game_overview_corner_count"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:textSize="18sp"
                    android:textColor="@color/black"
                    android:background="@color/white"
                    android:gravity="center"
                    android:layout_weight="1"
                    android:padding="8dp"/>

            </TableRow>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/design_default_color_primary"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:gravity="center"
                android:textSize="18sp"
                android:text="@string/card_stats_row_title" />

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="2">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:background="@color/light_grey"
                    android:gravity="center"
                    android:layout_weight="1"
                    android:padding="8dp"
                    android:textSize="18sp"
                    android:textColor="@color/design_default_color_primary"
                    android:textStyle="bold"
                    android:text="@string/game_overview_yellow_card_count"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:background="@color/light_grey"
                    android:gravity="center"
                    android:layout_weight="1"
                    android:padding="8dp"
                    android:textSize="18sp"
                    android:textColor="@color/design_default_color_primary"
                    android:textStyle="bold"
                    android:text="@string/game_overview_red_card_count"/>

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="2">

                <TextView
                    android:id="@+id/game_overview_yellow_card_count"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:textSize="18sp"
                    android:textColor="@color/black"
                    android:background="@color/white"
                    android:gravity="center"
                    android:layout_weight="1"
                    android:padding="8dp"/>

                <TextView
                    android:id="@+id/game_overview_red_card_count"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:textSize="18sp"
                    android:textColor="@color/black"
                    android:background="@color/white"
                    android:gravity="center"
                    android:layout_weight="1"
                    android:padding="8dp"/>

            </TableRow>

        </TableLayout>

    </androidx.core.widget.NestedScrollView>

</LinearLayout>